--- a/index.html
+++ b/index.html
@@ -1,8 +1,52 @@
 <html>
     <head>
         <title>How long since?</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/luxon@2.4.0/build/global/luxon.min.js"></script>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
+
+            body {
+                background-color: #5CDB95;
+                color: #EDF5E1;
+                font-weight: bold;
+                font-size: 48px;
+                font-family: 'Ubuntu', sans-serif;
+                text-transform: uppercase;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 100vh;
+            }
+        </style>
     </head>
     <body>
-        <div>Pages Test</div>
+        <div id="event-title"></div>
+        <div>вже</div>
+        <div id="event-time"></div>
     </body>
+    <script>
+        fetch("config.json")
+            .then(response => response.json())
+            .then(json => {
+                let eventTitle = document.querySelector('#event-title');
+                eventTitle.innerHTML = json.event;
+                setInterval(() => {
+                    let eventTime = document.querySelector('#event-time');
+                    const days = Math.floor(Math.abs(new Date() - Date.parse(json.startTime)) / (1000 * 60 * 60 * 24))
+                    const hours = Math.floor(Math.abs(new Date() - Date.parse(json.startTime)) / (1000 * 60 * 60)) - (days * 24);
+                    const minutes = Math.floor(Math.abs(new Date() - Date.parse(json.startTime)) / (1000 * 60)) - (days * 24 * 60) - (hours * 60);
+                    const seconds = Math.floor(Math.abs(new Date() - Date.parse(json.startTime)) / (1000))
+                        - (days * 24 * 60 * 60) - (hours * 60 * 60) - (minutes * 60);
+                    eventTime.innerHTML = `${days} днів, ${hours} годин, ${minutes} хвилин, ${seconds} секунд`;
+                }, 1000);
+            });   
+    </script>
 </html>
