--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/luxon@2.4.0/build/global/luxon.min.js"></script>
         <style>
             * {
                 margin: 0;
@@ -24,6 +23,10 @@
                 justify-content: center;
                 width: 100%;
                 height: 100vh;
+            }
+
+            div {
+                text-align: center;
             }
         </style>
     </head>
